QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
--------------------------------------------------------

ChangeLog

SVN TRUNK

- Message box title confidence fix (whatever it be:)

- MIDI controller assignment, any other than mostly MMC, is now
  user configurable for all widgets, buttons, sliders and knobs,
  trough the novel "Configure..." menu item. (EXPERIMENTAL)

- Dropped the "About Qt..." menu item.

- Use standard dialog buttons as provided by QDialogButtonBox.

- Attempt to comply with maemo.org extras-testing promotion.


0.0.1  2010-03-07  First public release.